compiler/test/fail/to_string_in_literals.js
// The member ["toString"] does not exist on literal values.
(1).toString();
